@@ -1,3 +1,9 @@
+2010-08-12  Todd Veldhuizen  <todd.veldhuizen@logicblox.com>
+
+	PR ld/11843
+	* elflink.c (compute_bucket_count): Avoid futile long searches for
+	the best bucket size.
+
 2010-08-09  Richard Henderson  <rth@redhat.com>
 
 	PR ld/11891
